<resources>
    <string name="app_name">WA or SMS</string>
    <string name="hint_number">Phone number</string>

    <!-- Edit these three manually for your own wording. Each is sent via
         WhatsApp and then SMS, one after the other, when its button is tapped. -->
    <string name="message_telugu">నక్షత్రశాల - https://www.saispace.in/faq-te.html \n https://www.saispace.in/</string>
    <string name="message_hindi"> तारामंडल - https://www.saispace.in/faq-hi.html \n https://www.saispace.in/</string>
    <string name="message_english">Planetarium FAQ - \n https://www.saispace.in/faq-en.html \n https://www.saispace.in/ has a preview</string>

    <string name="hint_telugu">Telugu message</string>
    <string name="hint_hindi">Hindi message</string>
    <string name="hint_english">English message</string>

    <string name="btn_telugu">Send Telugu</string>
    <string name="btn_hindi">Send Hindi</string>
    <string name="btn_english">Send English</string>
    <string name="btn_close">Close</string>
</resources>
